<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/White"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_a_message"
        android:textSize="@dimen/_12sdp"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reject_header_msg"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:gravity="center"
        android:layout_marginTop="@dimen/_5sdp"
        android:textSize="@dimen/_10sdp" />

    <EditText
        android:id="@+id/ed_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/type_your_message_optional"
        android:minLines="10"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_5sdp"
        android:textSize="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:maxLength="250"/>

    <TextView
        android:id="@+id/tv_characrter_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:gravity="end"
        android:text="0/250"
        android:textSize="@dimen/_7sdp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginTop="@dimen/_2sdp"/>

    <TextView
        android:id="@+id/tv_confirm_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/confirm_and_send"
        android:textColor="@color/light_blue"
        android:textSize="@dimen/_10sdp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginTop="@dimen/_2sdp"/>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/light_blue"
        android:textSize="@dimen/_10sdp"
        android:textStyle="bold"/>



</LinearLayout>