<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/fab_circle_menu"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="end|bottom"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_20sdp"
        android:src="@drawable/ic_menu_default"
        android:scaleType="fitXY"
        android:contentDescription="@string/menu_icon_default"
        />

    <FrameLayout
        android:id="@+id/frame_layout_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.9"
        android:background="@color/White"
        android:onClick="closeMenu"
        android:visibility="gone" />
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:titleTextColor="#ffffff"
            xmlns:android="http://schemas.android.com/apk/res/android">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textColor="@color/light_blue"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    android:onClick="goBack"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unknown_date"
                    android:textColor="@color/light_blue"
                    android:id="@+id/tv_toolbar_title"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/done"
                    android:textColor="@color/light_blue"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_alignParentEnd="true"
                    android:onClick="actionDone"
                    />

            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

        <ListView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/lv_time_slot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:scrollingCache="false"/>



    </LinearLayout>
</RelativeLayout>
