<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:titleTextColor="@color/White"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <RelativeLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="@color/light_blue"
                android:id="@+id/toolbar_tv_back"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown_date"
                android:id="@+id/toolbar_tv_title"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <TextView
        android:id="@+id/tvTimeSlotHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_grey"
        android:paddingBottom="@dimen/_2sdp"
        android:paddingStart="@dimen/_15sdp"
        android:paddingTop="@dimen/_2sdp"
        android:text="@string/select_a_time_to_schedule_an_appointment"
        android:textColor="@color/White"
        android:textSize="@dimen/_10sdp" />

        <ListView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/lv_time_slot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollingCache="false"/>



</LinearLayout>